src/test/resources/semantic/accept/multiplyExpression.ul
void main() {
}

boolean foo() {
    int result1;
    float result2;

    result1 = 5 * 6;
    result1 = 0 * 5;

    return 9.8 == 5.0 * 1.1;
}
