src/test/resources/semantic/reject/whileStatementArrayType.ul
void main() {
}

void foo() {
    int[5] array;

    while (array) {
    }
}
